Update to Java17 and Latest Opendaylight API