@@ -4,23 +4,137 @@
     
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.yangui</groupId>
+    <groupId>com.yang</groupId>
     <artifactId>main</artifactId>
     <version>1.0</version>
   </parent>
   <artifactId>client</artifactId>
   <packaging>jar</packaging>
-  <name>YangUI Client</name>
+  <name>Yang Client</name>
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  
+  <build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-compiler-plugin</artifactId>
+				  <version>3.8.0</version>
+				  <configuration>
+				    <source>17</source>                                                
+				    <target>17</target>                                                
+				    <release>17</release>                                              
+				    <executable>javac17</executable>
+				    <fork>false</fork>                            
+				    <encoding>UTF-8</encoding>
+				    <!-- see https://github.com/rzwitserloot/lombok/issues/985#issuecomment-356135454 -->
+				    <compilerArgs>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+				        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+				    </compilerArgs>
+				    <annotationProcessorPaths>
+				      <path>
+				        <groupId>org.projectlombok</groupId>
+				        <artifactId>lombok</artifactId>
+				        <version>1.18.24</version>
+				      </path>
+				    </annotationProcessorPaths>
+				    <showWarnings>true</showWarnings>
+				  </configuration>
+				  <dependencies>                                                         
+				    <dependency>                                                       
+				      <groupId>org.ow2.asm</groupId>                                 
+				      <artifactId>asm</artifactId>                                   
+				      <version>6.2</version>
+				    </dependency>                                                      
+				  </dependencies>
+				  </plugin>				
+			</plugins>
+		</pluginManagement>
+	</build>
+
+ 	<dependencies>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+            <exclusions>
+                <exclusion>
+                     <groupId>xml-apis</groupId>
+    				 <artifactId>xml-apis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+            <version>1.18.24</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+             <exclusions>
+                <exclusion>
+                     <groupId>xml-apis</groupId>
+    				 <artifactId>xml-apis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+            <version>4.13.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.9.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-assertj</artifactId>
+            <version>2.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 </project>
